# larql

./: Cargo.toml  README.md  paraphrase_on_compiled_results.json
crates/larql-cli/src/: main.rs
crates/larql-cli/tests/: test_run_experts.rs
crates/larql-compute/src/metal/: decode.rs  decode_profile.rs  mod.rs  trait_impl.rs
crates/larql-compute/tests/: test_metal_shaders.rs
crates/larql-experts/expert-interface/src/: lib.rs
crates/larql-inference/examples/: walk_correctness.rs
crates/larql-inference/src/: lib.rs
crates/larql-inference/src/experts/: caller.rs  mod.rs  registry.rs  session.rs
crates/larql-inference/src/forward/: mod.rs  predict.rs  target_delta.rs
crates/larql-inference/src/layer_graph/: pipeline_layer.rs
crates/larql-inference/src/vindex/: mod.rs  q4k_forward.rs  walk_ffn.rs
crates/larql-inference/tests/: test_arch_golden.rs
crates/larql-lql/src/executor/: lifecycle.rs  tests.rs
crates/larql-models/src/quant/: ggml.rs
crates/larql-python/src/: vindex.rs
crates/larql-router/: Cargo.toml
crates/larql-router/src/: main.rs
crates/larql-server/src/: main.rs  state.rs
crates/larql-server/tests/: test_api.rs
crates/larql-vindex/: Cargo.toml  README.md
crates/larql-vindex/examples/: demo_features.rs
crates/larql-vindex/src/: lib.rs
crates/larql-vindex/tests/: test_vindex.rs
docs/: cli.md  demo-script-gemma4-moe.md  demo-script-original.md  demo-script.md  larql-router-spec.md  vindex-server-spec.md  virtual-experts-dispatch.md
docs/adr/: 0003-ffn-router.md  0007-vindex-distribution.md
docs/ffn/: distributed.md
(+46 files in other folders)
